--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,13 +1,10 @@
 {
   "type": "postgres",
   "host": "localhost",
-  "port": 5432,
+  "port": 5433,
   "username": "admin",
   "password": "chessadmin",
-  "database": "chessSchool",
+  "database": "chessschool",
   "entities": ["dist/**/*.entity{.ts,.js}"],
-  "migrations": ["migration/*.js"],
-  "cli": {
-    "migrationsDir": "migration"
-  }
+  "synchronize": true
 }
